# gpu_compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: benchmark_compression.cu
include/: compression.h
src/: compression.cu
tests/: test_compression.cu
